--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,6 +30,19 @@ body {
     color: #666666;
 }
 
+.logoSymbol::before{
+    content: ':';
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    height: 50%;
+    margin-right: 8px;
+}
+.logoSymbol--white::before {
+    color: #FFF;
+}
+.logoSymbol--red::before {
+    color: #EB2E34;
+}
 /*toolbar start*/
 .toolbar {
     display: flex;
@@ -40,7 +53,7 @@ body {
 
 .toolbar__counter {
     display: flex;
-    justify-content:flex-start;
+    justify-content: flex-start;
     width: 50%;
 }
 
@@ -97,7 +110,7 @@ body {
 .menu {
     display: flex;
     height: 60px;
-    justify-content: space-between;.toolbar
+    justify-content: space-between;
     background: #E4E3E0;;
 }
 .navigation {
@@ -126,6 +139,24 @@ body {
 .feedback {
     display: flex;
     justify-content: space-between;
+    width: 30%;
 }
-
+.feedback__item {
+    font-family: Bebas Neue, sans-serif;
+    width: 50%;
+    height: 100%;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    border: 0;
+    cursor: pointer;
+}
+.feedback__item--white {
+    color: #EB2E34;
+    background:#FFF;
+}
+.feedback__item--red {
+    color: #FFF;
+    background: #EB2E34;
+}
 /*menu end*/
