--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,6 +32,7 @@ body {
 }
 .logoSymbol {
     position: relative;
+    z-index: 100;
 }
 .logoSymbol::before {
     content: ':';
@@ -180,6 +181,7 @@ body {
     align-items: center;
     font-family: Bebas Neue, sans-serif;
     height: 100%;
+    padding: 0 25px;
     font-size: 16px;
     font-weight: bold;
     letter-spacing: 1px;
@@ -204,13 +206,15 @@ body {
 .slider {
     position: relative;
     width: 100%;
-    min-height: 660px;
+
+    position: relative;
 }
 
 .slide {
     display: flex;
     width: 100%;
     height: 100%;
+    min-height: 660px;
 }
 
 .slide__block {
@@ -220,12 +224,34 @@ body {
 
 .slide__description {
     padding-top: 110px;
-    padding-left: 135px;
+    padding-left: 100px;
 }
 .slide__footer {
     position: absolute;
     bottom: 0;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 75px;
     background: transparent;
+    z-index: 10;
+}
+.slideFooter__more {
+    border: 0;
+    background: transparent;
+    font-size: 16px;
+    line-height: 19px;
+    font-style: italic;
+    color: #666666;
+}
+.slideFooter__more::before {
+    content: url(../img/slider/arrow-down.png);
+    display: inline-block;
+    vertical-align: middle;
+    padding: 10px;
+    width: 26px;
+    height: 26px;
 }
 .slidePromo {
     position: relative;
@@ -276,6 +302,17 @@ body {
     line-height: 22px;
     font-style: normal;
 }
+.slideDescription {
+    position: relative;
+    overflow: hidden;
+    z-index: 10;
+}
+.slideDescription__verticalImage {
+    position: absolute;
+    bottom: 0;
+    right: -6px;
+    z-index: 1;
+}
 .slideTitle {
     font-family: "Bebas Neue";
     font-size: 80px;
@@ -295,7 +332,7 @@ body {
 }
 
 .slideDescription__content {
-    padding: 14px 16px;
+    padding: 14px 115px 14px 16px;
     color: #666666;
 }
 .slideDescription__text {
@@ -314,4 +351,70 @@ body {
     margin-right: 0;
     margin-left: auto;
 }
+.slide__person {
+    position: absolute;
+    bottom: -3px;
+    left: 42%;
+    max-width: 340px;
+    height: auto;
+    z-index: 10;
+}
+.slidePagination {
+    width:auto;
+    color:#FBF8F6;
+}
+.slidePagination__container {
+    display: flex;
+    list-style-type: none;
+}
+.slidePagination__item {
+    width: 26px;
+    height: 26px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    cursor: pointer;
+}
+.slidePagination__item.slidePagination__item--active {
+    border-radius: 50%;
+    background-color: #EB2E34;
+}
 /*slider end*/
+
+/*about start*/
+.about {
+    display: flex;
+    width: 100%;
+}
+.about__block {
+    width: 50%;
+    padding: 80px 150px 120px;
+}
+.about__block--photo {
+    position: relative;
+    background-size: cover;
+    z-index: 1;
+}
+.about__linkBlock {
+    position: absolute;
+    width: auto;
+    left: 0;
+    bottom: 0;
+    z-index: 10;
+}
+.aboutTitle {
+    font-family: Bebas Neue;
+    font-weight: bold;
+    font-size: 50px;
+    line-height: 50px;
+    letter-spacing: 3px;
+    margin-bottom: 20px;
+}
+.aboutTitle__text {
+    color: #31312E;
+}
+.aboutTitle__text--red {
+    color: #EB2E34;
+}
+/*about end*/
