--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,11 +26,21 @@
 }
 
 body {
+    width: 100%;
+    height: 100%;
     font-family: 'Lato', sans-serif;
     margin: 0;
     color: #666666;
 }
+body.darken {
+    height: 100vh;
+    overflow: hidden;
+}
 
+.topBar {
+    position: relative;
+    z-index: 99999;
+}
 .header {
     position: sticky;
     top: 0;
@@ -444,31 +454,42 @@ ul {
     display: flex;
     list-style-type: none;
 }
- .slider__pagination  button{
-    color: #FBF8F6;
+.paginationBlock__container  button{
+    color: #666666;
+    font-size: 18px;
+    line-height: 22px;
     background: transparent;
     border: 0;
     padding: 0;
     outline: none;
     cursor: pointer;
 }
-.paginationBlock__item, .slider .paginationBlock__container li {
+.slider .paginationBlock__container  button, .slider .paginationBlock__item {
+    color: #FBF8F6;
+}
+.paginationBlock__item, .paginationBlock__container li {
     width: 26px;
     height: 26px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-right: 10px;
+    border: 0;
+    outline: none;
+    color: #666666;
+    background:transparent;
     cursor: pointer;
 }
 
-.paginationBlock__item.paginationBlock__item--active, .paginationBlock__item:hover, .slider .paginationBlock__container .slick-active {
+.paginationBlock__item.paginationBlock__item--active, .paginationBlock__item:hover, .paginationBlock__container .slick-active {
     color: #FBF8F6;
     padding-bottom: 3px;
     border-radius: 50%;
     background-color: #EB2E34;
 }
-
+.slick-active button {
+    color: #FBF8F6;
+}
 /*slider end*/
 
 /*about start*/
@@ -564,18 +585,17 @@ ul {
 }
 .ambassadors__container {
     display: flex;
+    justify-content: space-between;
     margin-bottom: 30px;
 }
 .ambassadors__item {
     display: flex;
     flex-direction: column;
-    width: 33%;
-    margin-right: 12px;
+    width: calc(33% - 6px);
+    max-width: 382px;
     height: 506px;
 }
-.ambassadors__item:nth-child(3) {
-    margin-right: 0;
-}
+
 .ambassador__main, .ambassador__sub{
     padding: 12px 32px;
     background: #FBF8F6;
@@ -615,10 +635,6 @@ ul {
 }
 .ambassadors__link--wide {
     width: 60%;
-}
-.ambassadors__footer {
-    display: flex;
-    justify-content: space-between;
 }
 .ambassadors__filter {
     margin-bottom: 30px;
@@ -837,16 +853,17 @@ ul {
 
 .articles__container {
     display: flex;
+    justify-content: space-between;
     width: 100%;
     margin-bottom: 30px;
 }
 
 .articles__item {
-    display: flex;
+    display: flex!important;
     flex-direction: column;
     justify-content: space-between;
     width: 33%;
-    margin-right: 12px;
+    max-width: 382px;
     height: 528px;
 }
 
@@ -912,9 +929,10 @@ ul {
 .article__link {
     width: 100%;
 }
-.articles__footer {
+.articles__footer, .ambassadors__footer, .instagram__footer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 /*articles end*/
 
@@ -944,7 +962,7 @@ ul {
 
 .instagram__feed {
     display: flex;
-    padding: 40px 0 30px 0;
+    padding: 0 0 30px 0;
     list-style-type: none;
 }
 
@@ -957,12 +975,9 @@ ul {
 .instagram__item:nth-child(4) {
     margin-right: 0;
 }
-
-.instagram__footer {
+.instagram__paginationWrapper, .ambassadors__paginationWrapper, .articles__paginationWrapper {
     display: flex;
-    justify-content: space-between;
 }
-
 /*instagram end*/
 
 /*footerNav start*/
@@ -1021,5 +1036,71 @@ ul {
     text-decoration-line: none;
     color: #888888;
 }
-
 /*bottomBar end*/
+/*searchBox start*/
+.searchBox {
+    display: none;
+    position: absolute;
+    top: 100px;
+    width:  100%;
+    z-index: 99;
+}
+.searchBox__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:  100%;
+    padding: 35px 218px;
+    background: #333333;
+}
+.searchBox__title {
+    margin-right: 40px;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 32px;
+    color: #FFFFFF;
+}
+.searchBox__input {
+    width: 100%;
+    height: 54px;
+    padding-left: 20px;
+    background: #FBF8F6;
+    border: 2px solid #CCCCCC;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    color: #666666;
+    outline: none;
+}
+.searchBox__inputWrapper {
+    position: relative;
+    width: 60%;
+}
+.searchBox__inputWrapper::after {
+    content: url("../img/search.png");
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 13px;
+    height: 13px;
+}
+::placeholder, ::-webkit-input-placeholder, ::-moz-placeholder, :-moz-placeholder, :-ms-input-placeholder {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    color: #666666;
+}
+/*searchBox end*/
+.darkenMask {
+    display: none;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    background: #000;
+    opacity: .6;
+    z-index: 95;
+}
