--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1153,7 +1153,7 @@ h1,h2,h3,h4,h5,h6 {
     display: flex;
     flex-direction: column;
 }
-.input, modamodalForm__input {
+.input {
     height: 54px;
     padding-left: 20px;
     background: #FBF8F6;
@@ -1270,12 +1270,15 @@ h1,h2,h3,h4,h5,h6 {
     width: 100%;
 }
 .textBlock__form {
+
+}
+.textBlock__fields {
     display: flex;
     flex-wrap: wrap;
     width: 60%;
     margin: 30px 0 35px 0;
 }
-.textBlock__form input, .textBlock__form select {
+.textBlock__form .inputWrapper, .textBlock__form select {
     width: calc(50% - 10px);
     margin-right: 10px;
     margin-bottom: 6px;
@@ -1287,5 +1290,27 @@ h1,h2,h3,h4,h5,h6 {
 }
 .textBlock__linkBlock {
     width: 35%;
+}
+.inputWrapper {
+    position: relative;
+}
+.inputWrapper .input {
+    width: 100%;
+}
+.inputWrapper.error {
+    margin-bottom: 26px;
+}
+.inputWrapper.error:after {
+    content: 'Поле не заполнено';
+    position: absolute;
+    right: 0;
+    top: 100%;
+    width: auto;
+    height: 20px;
+    font-size: 16px;
+    font-style: italic;
+    line-height: 19px;
+    text-align: right;
+    color: #EB2E34;
 }
 /*textblock end*/
